Fixed a horizontal scrollbar problem

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -14,6 +14,8 @@
   }
 
   &__call {
+    overflow: hidden;
+    
     @include onDesktop {
       &::before {
         content: "+1 234 555-55-55";
